# xselman

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README.md  README.textile  manual.t2t  xselman.1  xselman.c
.github/workflows/: ci.yml
debian/: changelog  control  copyright  rules  watch  xselman.manpages
sample/: cm.ui  t.c
